# python-vnfsvcclient

./: README.rst  README.rst~  setup.cfg
vnfsvcclient/: version.py
